html, css adjustments

--- a/less/styles.less
+++ b/less/styles.less
@@ -1,6 +1,46 @@
+
+
+html, body{
+	background-color: blue;
+}
+
+
+.bla{
+	background-color: blue;
+	height:100vh; 
+}
+
+.container{
+	background-color: white;
+	margin: 25px;
+}
+
 h1{
-	font-size: 70px;
+	font-size: 50px;
+	font-family: 'Montserrat', sans-serif;
 }
 h2{
-	font-size: 40px;
+	font-size: 30px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+p{
+	font-family: 'Montserrat', sans-serif;
+}
+.p-release{
+	width: 40%;
+}
+
+ul{
+	list-style: none;
+	padding: 0px;
+}
+ul li{
+	display: inline-block;
+	font-size: 20px;
+	padding: 0px;
+}
+
+.padd{
+	padding-left: 18px;
 }
